# cvip-cpp

./: .gitignore  CMakeLists.txt  Config.cmake
0_test/: CMakeLists.txt
0_test/data/: struct.yml  test.xml  test.yml
0_test/src/: 0_test.cpp  main.cpp
1_opencvgl/: CMakeLists.txt
1_opencvgl/src/: 1_opencvgl.cpp  main.cpp
cmake/: Config.cmake  DepsUtils.cmake  FindArch.cmake  Log.cmake
